# LLMRND

./: .env.example  .gitignore  CODEMAP.md  README.md  SYSTEM_FLOW.md  browser.py  pyproject.toml  requirements.txt  reset_db.py  test_query.py
.nogic/: config.json
cog_memory/: __init__.py  cognitive_graph.py  conflict_detector.py  decay.py  deduplication.py  embedding_manager.py  lance_store.py  llm_extractor.py  node.py  query_interface.py
docs/: ARCHITECTURE.md  GROQ_SETUP.md
examples/: basic_usage.py
tests/: __init__.py  test_deduplication.py  test_graph.py  test_node.py
